add page header

--- a/src/assets/scss/bootstrap.scss
+++ b/src/assets/scss/bootstrap.scss
@@ -1,4 +1,7 @@
 $theme-colors: (
+        "dark": #222222,
+        "dark-2": #333333,
+        "dark-3": #444444,
         "blue": #2286F1,
         "light-blue": #DFEAF5,
         "orange": #F18D22,
