add Rating Component

--- a/src/assets/scss/bootstrap.scss
+++ b/src/assets/scss/bootstrap.scss
@@ -7,7 +7,8 @@ $theme-colors: (
         "orange": #F18D22,
         "light-orange": #F5EADF,
         "green": #44AC68,
-        "light-green": #E3F3E8,
+        "light-green": #60B87F,
+        "light-green-2": #E3F3E8,
         "red": #F13022,
 );
 
