--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,3 +1,14 @@
+html {
+  font-size: 14px
+}
+
+.rtl {
+  direction: rtl;
+}
+.ltr {
+  direction: ltr;
+}
+
 //customize breadcrumb style
 .breadcrumb-item {
   & + .breadcrumb-item::before {
